# HPC_Resit

./: CMakeLists.txt  params.h  part1.c  part1.sbatch  part2.c  part2.sbatch  serial.c  serial.sh  test.c  test.sbatch
